--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ button[type = "submit"]{
     background: linear-gradient(180deg, hsl(210, 100%, 75%), hsl(40, 100%, 75%));
     padding: 50px;
     box-shadow: 2px 2px 5px hsla(0,0%,0%,0.5    );
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -58,7 +59,7 @@ p{
     color: hsl(0,0%, 0%, 0.75);
     margin-bottom: 25px;
 }
- 
+
 .humidityDisplay{
     font-weight: bold;
     margin-bottom: 25px;
@@ -70,12 +71,12 @@ p{
     font-size: 2rem;
 }
 
-.weatherEmoki{
+.weatherEmoji{
     margin: 0;
     font-size: 7.5rem;
 }
 
-.ererrorDisplay{
+.errorDisplay{
     font-size: 2.5rem;
     font-weight: bold;
     color: hsla(0,0%,0%,0.75    );
